@@ -10,8 +10,10 @@
 # changes in development version since last release 
 ################################################################################
 
+# IntaRNA
 - base pairs details only computed if needed for output (speedup for large -n)
 - predefined parameter sets for loading (Turner04, Turner99, Andronescu07)
+- 'tRegion' and 'qRegion' now available for and applied to multi-sequence input
 
 ################################################################################  
 ################################################################################  
@@ -21,6 +23,15 @@
    - numStringLength() : obsolete
  * IntaRNA/OutputHandlerText : 
    + explicit '+' for positive indices if relative indexing enabled
+ * bin/CommandLineParsing :
+   * validate_indexRangeList() :
+     + sequence id in error message
+   * parseRegion() :
+     + range check per sequence with sequence-specific error message
+     - single sequence input condition removed : ranges applied on all sequences
+ * IntaRNA/AccessibilityVrna :
+   * construction() : 
+     + bugfix: only call VRNA routines if seq.size() > 4
   
 190923 Martin Raden
  + m4/m4-ax_boost_iostreams.m4
